example/src/Function.scala
/**
  * Created by yjlee on 2017-03-26.
  */
class Car {


  val name = "sonata"

  //  name = "small sonata"   // error

  var velocity = 100


}
